<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.tg_co.loja.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/nome"
                android:ems="10"
                android:id="@+id/editTextNome" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextLogradouro"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_margin="5dp"
                    android:hint="@string/logradouro"
                    android:inputType="textPersonName"
                    android:text="" />


                <EditText
                    android:id="@+id/editTextNumero"
                    android:layout_width="50dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/numero"
                    android:ems="10" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="250dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/cidade"
                    android:ems="10"
                    android:id="@+id/editTextCidade" />

                <EditText
                    android:layout_width="50dp"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/uf"
                    android:ems="10"
                    android:id="@+id/editTextUf" />

            </LinearLayout>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/editTextEmail" />

            <Button
                android:text="Salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickSalvar"
                android:id="@+id/button2" />

            <Button
                android:text="Excluir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickExcluir"
                android:id="@+id/buttonExcluir" />

            <Button
                android:text="Menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickMenu"
                android:id="@+id/buttonMenu" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
